# AutoGen_Examples

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
data/documents/: project_overview.txt  quarterly_report.txt
data/notes/: metrics.csv  research_notes.md
docs/: AUTOGEN_CALL_FLOW.md  EXAMPLES_GUIDE.md  GITHUB_WORKFLOW_FLOW.md  OUTPUTS_REFERENCE.md  PER_EXAMPLE_EXECUTION_FLOW.md  QUICKSTART.md
examples/: 01_basic_agent_chat.py  02_tools_file_explorer.py  03_tools_text_analyzer.py  04_multi_agent_handoff.py  05_planner_executor.py  06_reflection_loop.py  07_document_explorer.py  08_batch_explorer.py  09_human_in_the_loop.py  10_conversational_coding_assistant.py  _common.py
samples/expected_outputs/01_basic_agent_chat/: example_output.txt  expected_behavior.md  input_text.txt  result.json  run_metadata.json  transcript.md
samples/expected_outputs/02_tools_file_explorer/: example_output.txt  expected_summary.json  input_text.txt  result.json  run_metadata.json  tool_calls.jsonl  transcript.md
samples/expected_outputs/03_tools_text_analyzer/: analysis_expectations.json  example_output.txt  input_text.txt  result.json  run_metadata.json  tool_calls.jsonl  transcript.md
samples/expected_outputs/04_multi_agent_handoff/: example_output.txt  (+5 more)
scripts/: regenerate_expected_outputs.ps1  run_all_examples.ps1  setup.ps1
src/autogen_infrastructure/: __init__.py  agents_factory.py  config.py  model_client.py  orchestrators.py  output_writer.py  tools_data.py  tools_fs.py  tools_registry.py  tools_text.py  validators.py
(+43 files in other folders)
