[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen-examples"
version = "0.1.0"
description = "Didactic AutoGen examples with reusable infrastructure and expected outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "autogen-agentchat==0.7.5",
  "autogen-ext==0.7.5",
  "ollama>=0.4.0",
  "openai>=1.40.0",
  "tiktoken>=0.8.0",
  "python-dotenv>=1.0.0",
  "pydantic-settings>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
